Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -135,7 +135,7 @@
     }
    ],
    "source": [
-    "set(sorted(list(df.byline))).pe"
+    "cset(sorted(list(df.byline))).pop(0)"
    ]
   },
   {
