--- a/index.ipynb
+++ b/index.ipynb
@@ -113,23 +113,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "pop() takes no arguments (1 given)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-f9c39cd197ee>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcritics\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msorted\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbyline\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mcritics\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: pop() takes no arguments (1 given)"
-     ]
+     "data": {
+      "text/plain": [
+       "{'A. O. SCOTT',\n",
+       " 'A.O. SCOTT',\n",
+       " 'BEN KENIGSBERG',\n",
+       " 'GLENN KENNY',\n",
+       " 'JEANNETTE CATSOULIS',\n",
+       " 'KEN JAWOROWSKI',\n",
+       " 'MANOHLA DARGIS',\n",
+       " 'TEO BUGBEE'}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "critics = set(sorted(list(df.byline))).pop(0)\n",
+    "critics = set(sorted(list(df.byline)))\n",
     "critics"
    ]
   },
