Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -113,8 +113,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -137,6 +146,15 @@
    "source": [
     "critics = set(sorted(list(df.byline)))\n",
     "critics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del critis"
    ]
   },
   {
