--- a/index.ipynb
+++ b/index.ipynb
@@ -144,7 +144,7 @@
     }
    ],
    "source": [
-    "critics = set(sorted(list(df.byline)))\n",
+    "critics = set(sorted(list(df.byline).pop(0)))\n",
     "critics"
    ]
   },
