Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -120,31 +120,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'A. O. SCOTT',\n",
-       " 'A.O. SCOTT',\n",
-       " 'BEN KENIGSBERG',\n",
-       " 'GLENN KENNY',\n",
-       " 'JEANNETTE CATSOULIS',\n",
-       " 'KEN JAWOROWSKI',\n",
-       " 'MANOHLA DARGIS',\n",
-       " 'TEO BUGBEE'}"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-12-6f5e238b0f23>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-12-6f5e238b0f23>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    critics\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
    "source": [
-    "critics = set(sorted(list(df.byline).pop(0)))\n",
+    "critics = set(sorted(list(df.byline)).pop(0)\n",
     "critics"
    ]
   },
