Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -128,16 +128,23 @@
     {
      "data": {
       "text/plain": [
-       "{' ', '.', 'A', 'C', 'O', 'S', 'T'}"
+       "{'A. O. SCOTT',\n",
+       " 'A.O. SCOTT',\n",
+       " 'BEN KENIGSBERG',\n",
+       " 'GLENN KENNY',\n",
+       " 'JEANNETTE CATSOULIS',\n",
+       " 'KEN JAWOROWSKI',\n",
+       " 'MANOHLA DARGIS',\n",
+       " 'TEO BUGBEE'}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "critics = set(sorted(list(df.byline)).pop(0))\n",
+    "critics = set(sorted(list(df.byline)))\n",
     "critics"
    ]
   },
