Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -128,24 +128,36 @@
     {
      "data": {
       "text/plain": [
-       "{'A. O. SCOTT',\n",
+       "['A. O. SCOTT',\n",
+       " 'A.O. SCOTT',\n",
+       " 'A.O. SCOTT',\n",
+       " 'A.O. SCOTT',\n",
        " 'A.O. SCOTT',\n",
        " 'BEN KENIGSBERG',\n",
+       " 'BEN KENIGSBERG',\n",
+       " 'BEN KENIGSBERG',\n",
+       " 'GLENN KENNY',\n",
+       " 'GLENN KENNY',\n",
+       " 'GLENN KENNY',\n",
        " 'GLENN KENNY',\n",
        " 'JEANNETTE CATSOULIS',\n",
+       " 'JEANNETTE CATSOULIS',\n",
+       " 'KEN JAWOROWSKI',\n",
+       " 'KEN JAWOROWSKI',\n",
        " 'KEN JAWOROWSKI',\n",
        " 'MANOHLA DARGIS',\n",
-       " 'TEO BUGBEE'}"
+       " 'TEO BUGBEE',\n",
+       " 'TEO BUGBEE']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "critics = sorted(list(df.byline))\n",
-    "critics"
+    "critics "
    ]
   },
   {
