Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -156,7 +156,7 @@
     }
    ],
    "source": [
-    "critics = sorted(list(df.byline))\n",
+    "critics = list(set(sorted(list(df.byline))))\n",
     "critics "
    ]
   },
