Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -120,25 +120,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'A. O. SCOTT'"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "critics = list(set(sorted(list(df.byline))))\n",
-    "critics.pop(0)"
+    "critics = critics.pop(0)\n",
+    "critics"
    ]
   },
   {
