--- a/index.ipynb
+++ b/index.ipynb
@@ -120,11 +120,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'A. O. SCOTT'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "critics = list(set(sorted(list(df.byline))))\n",
     "critics = critics.pop(0)\n",
