Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -127,7 +127,8 @@
    "outputs": [],
    "source": [
     "critics = list(set(sorted(list(df.byline))))\n",
-    "critics = critics.remove(critics[0])\n",
+    "critics\n",
+    "critics = critics.remove()\n",
     "critics"
    ]
   },
