Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -127,7 +127,7 @@
    "outputs": [],
    "source": [
     "critics = list(set(sorted(list(df.byline))))\n",
-    "critics\n",
+    "to_remove =\n",
     "critics = critics.remove()\n",
     "critics"
    ]
