Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -120,21 +120,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "critics = list(set(sorted(list(df.byline))))\n",
-    "to_remove =\n",
-    "critics = critics.remove()\n",
+    "to_remove = critics[0]\n",
+    "critics = critics.remove(to_remove)\n",
     "critics"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {
     "scrolled": true
    },
@@ -145,7 +145,7 @@
        "NoneType"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
