--- a/index.ipynb
+++ b/index.ipynb
@@ -120,15 +120,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['A. O. SCOTT',\n",
+       " 'GLENN KENNY',\n",
+       " 'KEN JAWOROWSKI',\n",
+       " 'TEO BUGBEE',\n",
+       " 'JEANNETTE CATSOULIS',\n",
+       " 'MANOHLA DARGIS',\n",
+       " 'BEN KENIGSBERG',\n",
+       " 'A.O. SCOTT']"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "critics = list(set(sorted(list(df.byline))))\n",
-    "to_remove = critics[0]\n",
-    "critics = critics.remove(to_remove)\n",
+    "# to_remove = critics[0]\n",
+    "# critics = critics.remove(to_remove)\n",
     "critics"
    ]
   },
