--- a/index.ipynb
+++ b/index.ipynb
@@ -146,7 +146,7 @@
    "source": [
     "critics = list(set(sorted(list(df.byline))))\n",
     "# to_remove = critics[0]\n",
-    "# critics = critics.remove(to_remove)\n",
+    "critics.remove(to_remove)\n",
     "critics"
    ]
   },
