Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {
     "scrolled": true
    },
@@ -128,8 +128,7 @@
     {
      "data": {
       "text/plain": [
-       "['A. O. SCOTT',\n",
-       " 'GLENN KENNY',\n",
+       "['GLENN KENNY',\n",
        " 'KEN JAWOROWSKI',\n",
        " 'TEO BUGBEE',\n",
        " 'JEANNETTE CATSOULIS',\n",
@@ -138,15 +137,15 @@
        " 'A.O. SCOTT']"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "critics = list(set(sorted(list(df.byline))))\n",
-    "# to_remove = critics[0]\n",
-    "critics.remove(to_remove)\n",
+    "to_remove = critics[0]\n",
+    "critics.remove(critics)\n",
     "critics"
    ]
   },
