Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {
     "scrolled": true
    },
@@ -137,15 +137,14 @@
        " 'A.O. SCOTT']"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "critics = list(set(sorted(list(df.byline))))\n",
-    "to_remove = critics[0]\n",
-    "critics.remove(critics)\n",
+    "critics.remove(critics[0])\n",
     "critics"
    ]
   },
