--- a/index.ipynb
+++ b/index.ipynb
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {
     "scrolled": true
    },
@@ -158,16 +158,16 @@
     {
      "data": {
       "text/plain": [
-       "NoneType"
+       "7"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(critics)"
+    "len(critics)"
    ]
   },
   {
