Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -168,7 +168,7 @@
    ],
    "source": [
     "len(critics)\n",
-    "#this is the number of r"
+    "#this is the number of critics"
    ]
   },
   {
