--- a/index.ipynb
+++ b/index.ipynb
@@ -241,24 +241,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'type': 'article',\n",
-       " 'url': 'http://www.nytimes.com/2018/10/16/movies/can-you-ever-forgive-me-review-melissa-mccarthy.html',\n",
-       " 'suggested_link_text': 'Read the New York Times Review of Can You Ever Forgive Me'}"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-33-2d96acef7459>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-33-2d96acef7459>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    df.link[0][['url']\u001b[0m\n\u001b[0m                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
     }
    ],
    "source": [
-    "df.link[0]["
+    "df.link[0][['url']"
    ]
   },
   {
