Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -347,7 +347,7 @@
    "cell_type": "code",
    "execution_count": 35,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -365,6 +365,15 @@
    ],
    "source": [
     "df.link[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df."
    ]
   },
   {
