Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -339,7 +339,7 @@
     }
    ],
    "source": [
-    "url_list = list(map(lamba ))"
+    "url_list = list(map(lamba x : x['url']))"
    ]
   },
   {
