--- a/index.ipynb
+++ b/index.ipynb
@@ -241,20 +241,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-39-7c56173ab853>, line 1)",
+     "evalue": "invalid syntax (<ipython-input-40-09739cc0f2b9>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-39-7c56173ab853>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    url_list = list(map(lamba x : x['url'], df.link))\u001b[0m\n\u001b[0m                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-40-09739cc0f2b9>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    url_list = list(map(lamdba x : x['url'], df.link))\u001b[0m\n\u001b[0m                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
-    "url_list = list(map(lamba x : x['url'], df.link))"
+    "url_list = list(map(lamdba x : x['url'], df.link))"
    ]
   },
   {
