Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -250,6 +250,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url_list"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 38,
    "metadata": {
     "scrolled": true
