--- a/index.ipynb
+++ b/index.ipynb
@@ -250,9 +250,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['http://www.nytimes.com/2018/10/16/movies/can-you-ever-forgive-me-review-melissa-mccarthy.html',\n",
+       " 'http://www.nytimes.com/2018/10/16/movies/charm-city-review-baltimore.html',\n",
+       " 'http://www.nytimes.com/2018/10/16/movies/horn-from-the-heart-review-paul-butterfield.html',\n",
+       " 'http://www.nytimes.com/2018/10/16/movies/the-price-of-everything-review-documentary.html',\n",
+       " 'http://www.nytimes.com/2018/10/16/movies/impulso-review-documentary.html',\n",
+       " 'http://www.nytimes.com/2018/10/11/movies/watergate-review-documentary.html',\n",
+       " 'http://www.nytimes.com/2018/10/11/movies/barbara-review.html',\n",
+       " 'http://www.nytimes.com/2018/10/11/movies/over-the-limit-review.html',\n",
+       " 'http://www.nytimes.com/2018/10/11/movies/the-kindergarten-teacher-review.html',\n",
+       " 'http://www.nytimes.com/2018/10/11/movies/classical-period-review.html',\n",
+       " 'http://www.nytimes.com/2018/10/11/movies/bad-times-at-the-el-royale-review.html',\n",
+       " 'http://www.nytimes.com/2018/10/11/movies/beautiful-boy-review-steve-carell.html',\n",
+       " 'http://www.nytimes.com/2018/10/11/movies/the-oath-review-tiffany-haddish.html',\n",
+       " 'http://www.nytimes.com/2018/10/11/movies/bikini-moon-review.html',\n",
+       " 'http://www.nytimes.com/2018/10/11/movies/goosebumps-2-haunted-halloween-review.html',\n",
+       " 'http://www.nytimes.com/2018/10/11/movies/the-sentence-review.html',\n",
+       " 'http://www.nytimes.com/2018/10/11/movies/all-square-review.html',\n",
+       " 'http://www.nytimes.com/2018/10/11/movies/sadie-review.html',\n",
+       " 'http://www.nytimes.com/2018/10/11/movies/after-everything-review.html',\n",
+       " 'http://www.nytimes.com/2018/10/10/movies/first-man-review-ryan-gosling-damien-chazelle.html']"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "url_list"
    ]
@@ -305,7 +335,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[review_url] = "
+    "df[review_url] = url_l"
    ]
   },
   {
