Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -331,11 +331,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[review_url] = url_l"
+    "df['review_url'] = url_list"
    ]
   },
   {
