Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -527,11 +527,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(20, 12)"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df"
+    "df.shape"
    ]
   },
   {
