--- a/index.ipynb
+++ b/index.ipynb
@@ -857,174 +857,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<bound method DataFrame.count of                  byline  critics_pick         date_updated  \\\n",
-       "0            A.O. SCOTT             1  2018-10-17 02:44:23   \n",
-       "1        BEN KENIGSBERG             1  2018-10-16 11:04:03   \n",
-       "2           GLENN KENNY             1  2018-10-16 11:04:04   \n",
-       "3           A. O. SCOTT             0  2018-10-16 16:08:03   \n",
-       "4        BEN KENIGSBERG             0  2018-10-16 11:04:03   \n",
-       "5            A.O. SCOTT             1  2018-10-17 02:44:21   \n",
-       "6           GLENN KENNY             1  2018-10-17 02:44:21   \n",
-       "7   JEANNETTE CATSOULIS             1  2018-10-17 02:44:20   \n",
-       "8   JEANNETTE CATSOULIS             1  2018-10-17 02:44:19   \n",
-       "9        BEN KENIGSBERG             1  2018-10-17 02:44:18   \n",
-       "10       MANOHLA DARGIS             0  2018-10-17 02:44:22   \n",
-       "11           A.O. SCOTT             0  2018-10-17 02:44:21   \n",
-       "12          GLENN KENNY             0  2018-10-17 02:44:21   \n",
-       "13       KEN JAWOROWSKI             0  2018-10-17 02:44:20   \n",
-       "14           TEO BUGBEE             0  2018-10-17 02:44:20   \n",
-       "15       KEN JAWOROWSKI             0  2018-10-17 02:44:19   \n",
-       "16          GLENN KENNY             0  2018-10-11 11:04:11   \n",
-       "17       KEN JAWOROWSKI             0  2018-10-11 11:04:07   \n",
-       "18           TEO BUGBEE             0  2018-10-17 02:44:18   \n",
-       "19           A.O. SCOTT             0  2018-10-17 02:44:18   \n",
-       "\n",
-       "                                      display_title  \\\n",
-       "0                           Can You Ever Forgive Me   \n",
-       "1                                        Charm City   \n",
-       "2   Horn from the Heart: The Paul Butterfield Story   \n",
-       "3                           The Price of Everything   \n",
-       "4                                           Impulso   \n",
-       "5                                         Watergate   \n",
-       "6                                           Barbara   \n",
-       "7                                    Over the Limit   \n",
-       "8                          The Kindergarten Teacher   \n",
-       "9                                  Classical Period   \n",
-       "10                       Bad Times at the El Royale   \n",
-       "11                                    Beautiful Boy   \n",
-       "12                                         The Oath   \n",
-       "13                                      Bikini Moon   \n",
-       "14                  Goosebumps 2: Haunted Halloween   \n",
-       "15                                     The Sentence   \n",
-       "16                                       All Square   \n",
-       "17                                            Sadie   \n",
-       "18                                 After Everything   \n",
-       "19                                        First Man   \n",
-       "\n",
-       "                                             headline  \\\n",
-       "0   Review: Melissa McCarthy Is Criminally Good in...   \n",
-       "1   Review: ‘Charm City’ Vividly Captures the Stre...   \n",
-       "2   Review: Paul Butterfield’s Story Is Told in ‘H...   \n",
-       "3   Review: ‘The Price of Everything’ Asks $56 Bil...   \n",
-       "4   Review: ‘Impulso’ Goes Backstage With a Flamen...   \n",
-       "5   Review: ‘Watergate’ Shocks Anew With Its True ...   \n",
-       "6   Review: In ‘Barbara,’ a Fictional Biopic of a ...   \n",
-       "7     Review: A Russian Gymnast Goes ‘Over the Limit’   \n",
-       "8   Review: The Disturbing Obsession of ‘The Kinde...   \n",
-       "9   Review: In ‘Classical Period,’ a Deep Dive — R...   \n",
-       "10  Review: Hard-Boiled Play in ‘Bad Times at the ...   \n",
-       "11  Review: In ‘Beautiful Boy,’ a Writer Confronts...   \n",
-       "12  Review: In ‘The Oath,’ a Pledge of Allegiance ...   \n",
-       "13  Review: ‘Bikini Moon’ Finds a Documentary Crew...   \n",
-       "14  Review: ‘Goosebumps 2: Haunted Halloween’ Is T...   \n",
-       "15  Review: In ‘The Sentence,’ a Woman Gets Prison...   \n",
-       "16  Review: In ‘All Square,’ Taking Big Bets on Yo...   \n",
-       "17  Review: The Drama ‘Sadie’ Finds a Teenager in ...   \n",
-       "18  Review: In ‘After Everything,’ a Young Love Bl...   \n",
-       "19  Review: ‘First Man’ Takes a Giant Leap for Man...   \n",
-       "\n",
-       "                                                 link mpaa_rating  \\\n",
-       "0   {'type': 'article', 'url': 'http://www.nytimes...           R   \n",
-       "1   {'type': 'article', 'url': 'http://www.nytimes...               \n",
-       "2   {'type': 'article', 'url': 'http://www.nytimes...               \n",
-       "3   {'type': 'article', 'url': 'http://www.nytimes...               \n",
-       "4   {'type': 'article', 'url': 'http://www.nytimes...               \n",
-       "5   {'type': 'article', 'url': 'http://www.nytimes...               \n",
-       "6   {'type': 'article', 'url': 'http://www.nytimes...               \n",
-       "7   {'type': 'article', 'url': 'http://www.nytimes...               \n",
-       "8   {'type': 'article', 'url': 'http://www.nytimes...           R   \n",
-       "9   {'type': 'article', 'url': 'http://www.nytimes...               \n",
-       "10  {'type': 'article', 'url': 'http://www.nytimes...           R   \n",
-       "11  {'type': 'article', 'url': 'http://www.nytimes...           R   \n",
-       "12  {'type': 'article', 'url': 'http://www.nytimes...           R   \n",
-       "13  {'type': 'article', 'url': 'http://www.nytimes...               \n",
-       "14  {'type': 'article', 'url': 'http://www.nytimes...          PG   \n",
-       "15  {'type': 'article', 'url': 'http://www.nytimes...               \n",
-       "16  {'type': 'article', 'url': 'http://www.nytimes...               \n",
-       "17  {'type': 'article', 'url': 'http://www.nytimes...               \n",
-       "18  {'type': 'article', 'url': 'http://www.nytimes...               \n",
-       "19  {'type': 'article', 'url': 'http://www.nytimes...       PG-13   \n",
-       "\n",
-       "                                           multimedia opening_date  \\\n",
-       "0   {'type': 'mediumThreeByTwo210', 'src': 'https:...   2018-10-19   \n",
-       "1   {'type': 'mediumThreeByTwo210', 'src': 'https:...   2018-04-22   \n",
-       "2   {'type': 'mediumThreeByTwo210', 'src': 'https:...   2018-10-19   \n",
-       "3   {'type': 'mediumThreeByTwo210', 'src': 'https:...   2018-10-19   \n",
-       "4   {'type': 'mediumThreeByTwo210', 'src': 'https:...         None   \n",
-       "5   {'type': 'mediumThreeByTwo210', 'src': 'https:...   2018-10-12   \n",
-       "6   {'type': 'mediumThreeByTwo210', 'src': 'https:...         None   \n",
-       "7   {'type': 'mediumThreeByTwo210', 'src': 'https:...   2018-10-05   \n",
-       "8   {'type': 'mediumThreeByTwo210', 'src': 'https:...   2018-10-12   \n",
-       "9   {'type': 'mediumThreeByTwo210', 'src': 'https:...         None   \n",
-       "10  {'type': 'mediumThreeByTwo210', 'src': 'https:...   2018-10-12   \n",
-       "11  {'type': 'mediumThreeByTwo210', 'src': 'https:...   2018-10-12   \n",
-       "12  {'type': 'mediumThreeByTwo210', 'src': 'https:...   2018-10-12   \n",
-       "13  {'type': 'mediumThreeByTwo210', 'src': 'https:...   2018-10-12   \n",
-       "14  {'type': 'mediumThreeByTwo210', 'src': 'https:...   2018-10-12   \n",
-       "15  {'type': 'mediumThreeByTwo210', 'src': 'https:...   2018-10-12   \n",
-       "16  {'type': 'mediumThreeByTwo210', 'src': 'https:...         None   \n",
-       "17  {'type': 'mediumThreeByTwo210', 'src': 'https:...   2018-10-12   \n",
-       "18  {'type': 'mediumThreeByTwo210', 'src': 'https:...   2018-10-12   \n",
-       "19  {'type': 'mediumThreeByTwo210', 'src': 'https:...   2018-10-12   \n",
-       "\n",
-       "   publication_date                                      summary_short  \\\n",
-       "0        2018-10-16  Marielle Heller directs a true story of litera...   \n",
-       "1        2018-10-16  Marilyn Ness’s documentary is dedicated to the...   \n",
-       "2        2018-10-16  A documentary explores the life of the blues m...   \n",
-       "3        2018-10-16  This documentary examines the global art marke...   \n",
-       "4        2018-10-16  This documentary follows Rocío Molina, a cutti...   \n",
-       "5        2018-10-11  Charles Ferguson delivers a comprehensive docu...   \n",
-       "6        2018-10-11  It’s a film of scenes rather than of one unifi...   \n",
-       "7        2018-10-11  Margarita Mamun endures injury and abuse in Ma...   \n",
-       "8        2018-10-11  Maggie Gyllenhaal is riveting as a dissatisfie...   \n",
-       "9        2018-10-11  This highly original feature is technically in...   \n",
-       "10       2018-10-11  The writer-director Drew Goddard has fun with ...   \n",
-       "11       2018-10-11  Two memoirs are brought to the screen in a fat...   \n",
-       "12       2018-10-11  This satirical comedy, written, directed by an...   \n",
-       "13       2018-10-11  Condola Rashad plays the title character, a ho...   \n",
-       "14       2018-10-11  This sequel to the movie adaptation of R.L. St...   \n",
-       "15       2018-10-11  The documentary denounces minimum sentencing l...   \n",
-       "16       2018-10-11  Michael Kelly, Pamela Adlon and Josh Lucas enh...   \n",
-       "17       2018-10-11  The film stars Sophia Mitri Schloss as the tit...   \n",
-       "18       2018-10-11  This cancer drama focuses less on the high sta...   \n",
-       "19       2018-10-10  Damien Chazelle’s sweeping and intimate yet un...   \n",
-       "\n",
-       "                                           review_url  \n",
-       "0   http://www.nytimes.com/2018/10/16/movies/can-y...  \n",
-       "1   http://www.nytimes.com/2018/10/16/movies/charm...  \n",
-       "2   http://www.nytimes.com/2018/10/16/movies/horn-...  \n",
-       "3   http://www.nytimes.com/2018/10/16/movies/the-p...  \n",
-       "4   http://www.nytimes.com/2018/10/16/movies/impul...  \n",
-       "5   http://www.nytimes.com/2018/10/11/movies/water...  \n",
-       "6   http://www.nytimes.com/2018/10/11/movies/barba...  \n",
-       "7   http://www.nytimes.com/2018/10/11/movies/over-...  \n",
-       "8   http://www.nytimes.com/2018/10/11/movies/the-k...  \n",
-       "9   http://www.nytimes.com/2018/10/11/movies/class...  \n",
-       "10  http://www.nytimes.com/2018/10/11/movies/bad-t...  \n",
-       "11  http://www.nytimes.com/2018/10/11/movies/beaut...  \n",
-       "12  http://www.nytimes.com/2018/10/11/movies/the-o...  \n",
-       "13  http://www.nytimes.com/2018/10/11/movies/bikin...  \n",
-       "14  http://www.nytimes.com/2018/10/11/movies/goose...  \n",
-       "15  http://www.nytimes.com/2018/10/11/movies/the-s...  \n",
-       "16  http://www.nytimes.com/2018/10/11/movies/all-s...  \n",
-       "17  http://www.nytimes.com/2018/10/11/movies/sadie...  \n",
-       "18  http://www.nytimes.com/2018/10/11/movies/after...  \n",
-       "19  http://www.nytimes.com/2018/10/10/movies/first...  >"
+       "(20, 12)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.count"
+    "df.shape"
    ]
   },
   {
