Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -857,22 +857,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(20, 12)"
+       "20"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.shape"
+    "print(fdf.shape[0]"
    ]
   },
   {
