Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -857,22 +857,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "20"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 20 results in the file\n"
+     ]
     }
    ],
    "source": [
-    "print(f'There are {df.shape[0]} res"
+    "print(f'There are {df.shape[0]} results in the file')"
    ]
   },
   {
