Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -857,19 +857,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are 20 results in the file\n"
+      "There are 20 results in the file.\n"
      ]
     }
    ],
    "source": [
-    "print(f'There are {df.shape[0]} results in the file')"
+    "print(f'There are {df.shape[0]} results in the file.')"
    ]
   },
   {
